# WorkDeck

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  publish.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_resource_credentials.sql  003_resource_pinned.sql  004_resource_target.sql
src-tauri/src/: lib.rs  main.rs
src/components/: resources.tsx
src/data/: seed.ts
src/domain/: resources.ts  workspace.ts
src/hooks/: useProjects.ts
src/repositories/: memoryProjectRepository.ts  postgresProjectRepository.ts  projectAccent.ts  projectRepository.ts  sqliteProjectRepository.ts
src/services/: appSettings.ts  appUpdate.ts  databaseConfig.ts  filePicker.ts  masterSecret.ts  resourceActions.ts
