[package]
name = "workdeck"
version = "0.1.11"
description = "A lightweight desktop workspace manager"
authors = ["WorkDeck"]
edition = "2021"

[lib]
name = "workdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["postgres", "sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
